# quantum-lattice

./: .gitignore  ANDROID_PORT_PLAN.md  CLAUDE.md  README.md  install.py  pyproject.toml  quantum_lattice_launcher.py  requirements.txt  update.py
interface-pyqt/0d/: 0d.py  interface.py  interface.ui
interface-pyqt/1d/: 1d.py  interface.py  interface.ui
interface-pyqt/2d/: 2d.py  interface.py  interface.ui
interface-pyqt/2dslab/: 2dslab.py  convert.sh  interface.py  interface.ui
interface-pyqt/3d/: 3d.py  interface.py  interface.ui
interface-pyqt/heavyfermion/: heavyfermion.py  interface.py  interface.ui
interface-pyqt/hofstader1d/: hofstader1d.py  interface.py  interface.ui
interface-pyqt/huge_0d/: crystal.xyz  hamiltonian.pkl  handlers.py  huge_0d.py  interface.py  interface.ui  islandbuild.py
interface-pyqt/hybridfilm/: hybridfilm.py  interface.py  interface.ui
interface-pyqt/hybridribbon/: hybridribbon.py  interface.py  interface.ui
interface-pyqt/tbg/: tbg.py  (+2 more)
tools/: smoke_test.py
utilities/: _pv3d.py  chi-poles  image.py  libmag.py  plot3d  plot_multiterminal  plotstyle.py  qh-bands0d  qh-bands2d  qh-beautiful-ldos  qh-berry2d  qh-color-scatter  qh-dos  qh-dos-path  qh-dosbands  qh-fast-ldos-pm  qh-fast-pick  qh-fast-structure  qh-hist  qh-hist2d  qh-kdos  qh-ldos  qh-ldos-slab  qh-light-structure  qh-magnetism  qh-map2d  qh-moments  qh-multitimeevolution  qh-participation  qh-pick  qh-pick-single-atom  qh-plot3d  qh-plotchern  qh-potential-bond  qh-quiver  qh-scatter3d  qh-select-atoms-geometry  qh-signed-wave  qh-structure  qh-structure-tbg  (+108 more)
(+43 files in other folders)
